controller/test/e2e/features/agentgateway/remotejwtauth/testdata/common.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca
  namespace: agentgateway-base
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDcTCCAlmgAwIBAgIUFnMGH+qW/A0LMZx7I6Q68cYIVnMwDQYJKoZIhvcNAQEL
[...]
    MVzjnmopxIj46tWMm21d0e1euT4z
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca
  namespace: default
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDcTCCAlmgAwIBAgIUFnMGH+qW/A0LMZx7I6Q68cYIVnMwDQYJKoZIhvcNAQEL
[...]
    MVzjnmopxIj46tWMm21d0e1euT4z
    -----END CERTIFICATE-----
