controller/test/e2e/features/agentgateway/remotejwtauth/testdata/secured-gateway-policy-with-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-gw
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "securegateways.com"
  rules:
  - backendRefs:
    - name: backend
      port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://kgateway.dev
        jwks:
          remote:
            jwksPath: org-one/keys
            backendRef:
              group: agentgateway.dev
              kind: AgentgatewayBackend
              name: dummy-idp-1
              port: 8443
      - issuer: https://kgateway.dev
        jwks:
          remote:
            jwksPath: org-two/keys
            backendRef:
              group: agentgateway.dev
              kind: AgentgatewayBackend
              name: dummy-idp
              port: 8443
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: dummy-idp
  namespace: agentgateway-base
spec:
  policies:
    tls:
      insecureSkipVerify: All
  static:
    host: dummy-idp.default
    port: 8443
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: dummy-idp-1
  namespace: agentgateway-base
spec:
  policies:
    tls:
      caCertificateRefs:
      - name: ca
  static:
    host: dummy-idp.default
    port: 8443
