controller/test/e2e/features/agentgateway/remotejwtauth/testdata/secured-gateway-policy-with-rbac.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-gw
  namespace: agentgateway-base
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "securegateways.com"
  rules:
  - backendRefs:
    - name: backend
      port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    authorization:
      action: Allow
      policy:
        matchExpressions:
          - 'jwt.sub == "ignore@agentgateway.dev"'
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://agentgateway.dev
        jwks:
          remote:
            jwksPath: org-one/keys
            backendRef:
              group: ""
              kind: Service
              name: dummy-idp
              port: 8443
              namespace: default
      - issuer: https://agentgateway.dev
        jwks:
          remote:
            jwksPath: org-four/keys
            backendRef:
              group: ""
              kind: Service
              name: dummy-idp
              port: 8443
              namespace: default
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: idp-policy
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: dummy-idp
  backend:
    tls:
      insecureSkipVerify: All
