controller/test/e2e/features/agentgateway/remotejwtauth/testdata/secured-route-with-backend-and-ref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://kgateway.dev
        jwks:
          remote:
            jwksPath: org-one/keys
            backendRef:
              group: agentgateway.dev
              kind: AgentgatewayBackend
              name: dummy-idp
              port: 8443
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: dummy-idp
  namespace: agentgateway-base
spec:
  static:
    host: dummy-idp.default
    port: 8443
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: idp-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: agentgateway.dev
    kind: AgentgatewayBackend
    name: dummy-idp
  backend:
    tls:
      insecureSkipVerify: All
