controller/test/e2e/features/agentgateway/remotejwtauth/testdata/secured-route-with-svc-discovery.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://kgateway.dev
        jwks:
          discovery:
            backendRef:
              group: ""
              kind: Service
              name: dummy-idp
              port: 8443
              namespace: default
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: idp-policy
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: dummy-idp
  backend:
    tls:
      insecureSkipVerify: All
